--- a/1er projet/index.html
+++ b/1er projet/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta width="device-width" initiale-scale="1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
     <title>Build a Survey Form</title>
   </head>
 <body>
