icon/meta description uptade

--- a/2em projet/index.html
+++ b/2em projet/index.html
@@ -6,6 +6,8 @@
    <link rel="stylesheet" href="styles.css">
    <link href="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=theater_comedy" />
+   <link rel="icon" type="image/png" href="https://img.icons8.com/?size=512&id=77992&format=png">
+   <meta name="description" content="Découvrez notre page hommage dédiée au Joker, l'icône de l'antihéros et de la liberté. Plongez dans l'univers complexe et sombre du personnage, de sa philosophie à ses incarnations les plus célèbres au cinéma.">
    <title>Tribute Page</title>
   </head>
  <body>
