uptade paragraph styling

--- a/3eme projet/index.html
+++ b/3eme projet/index.html
@@ -65,7 +65,7 @@
                     <li><em>r</em> est la distance du centre de cette masse.</li>
                 </ul>
           <h2>Dans le cas d'un photon</h2>
-            <p>i nous appliquons cette formule à la lumière, pour laquelle la vitesse est <em>c</em> (la vitesse de la lumière), soit 3 x 10<sup>8</sup>m/s, nous pouvons trouver la distance à partir de laquelle même la lumière ne peut échapper à l'attraction gravitationnelle d'un corps massif. Cette distance est appelée le <strong>rayon de Schwarzschild <em>rs</em></strong> et elle définit l'horizon d'un trou noir.</p>
+            <p>i nous appliquons cette formule à la lumière, pour laquelle la vitesse est <em>c</em> (la vitesse de la lumière), soit 3 x 10<sup>8</sup>m/s, nous pouvons trouver la distance à partir de laquelle même la lumière ne peut échapper à l'attraction gravitationnelle d'un corps massif. Cette distance est appelée le <strong>rayon de Schwarzschild <em>Rs</em></strong> et elle définit l'horizon d'un trou noir.</p>
             <p>En posant:</p>
 
             <code> V.esc=c</code>
@@ -77,7 +77,7 @@ c = \sqrt{\frac{2GM}{r_s}}
 $$
 
 
-            <p>En résolvant pour <em>rs</em>, on trouve :</p>
+            <p>En résolvant pour <em>Rs</em>, on trouve :</p>
 
             $$
             r_s = \frac{2GM}{c^2}
@@ -191,10 +191,10 @@ $$
                   
 
                    <ul>
-                     <li>Étoile Massive : Lorsqu'une étoile d'une masse au moins 8 à 10 fois supérieure à celle du Soleil arrive à la fin de sa vie, elle épuise son carburant nucléaire.</li>
-                     <li>Effondrement Gravitationnel : Une fois que la fusion nucléaire s'arrête, l'équilibre entre la pression thermique (qui poussait vers l'extérieur) et la gravité (qui pousse vers l'intérieur) est brisé. L'étoile s'effondre sous son propre poids.</li>
-                     <li>Explosion en Supernova : L'étoile massive peut exploser en une supernova, libérant une grande quantité d'énergie. Si le cœur restant a une masse suffisamment élevée (environ 3 fois celle du Soleil), il s'effondre en un trou noir.</li>
-                     <li>Formation du Trou Noir : Le noyau devient si dense qu'il crée une singularité, un point où la courbure de l'espace-temps devient infinie, et un horizon des événements se forme autour de cette singularité.</li>
+                     <li><strong>Étoile Massive </strong>: Lorsqu'une étoile d'une masse au moins 8 à 10 fois supérieure à celle du Soleil arrive à la fin de sa vie, elle épuise son carburant nucléaire.</li>
+                     <li><strong>Effondrement Gravitationnel</strong> : Une fois que la fusion nucléaire s'arrête, l'équilibre entre la pression thermique (qui poussait vers l'extérieur) et la gravité (qui pousse vers l'intérieur) est brisé. L'étoile s'effondre sous son propre poids.</li>
+                     <li><strong>Explosion en Supernova</strong> : L'étoile massive peut exploser en une supernova, libérant une grande quantité d'énergie. Si le cœur restant a une masse suffisamment élevée (environ 3 fois celle du Soleil), il s'effondre en un trou noir.</li>
+                     <li><strong>Formation du Trou Noir</strong> : Le noyau devient si dense qu'il crée une singularité, un point où la courbure de l'espace-temps devient infinie, et un horizon des événements se forme autour de cette singularité.</li>
                     <div class="container">
                      <img src="https://media.springernature.com/full/springer-static/image/art%3A10.1038%2Fnature09294/MediaObjects/41586_2010_Article_BFnature09294_Fig1_HTML.jpg" alt="Etapes de formation d'un trou noir">
                        <figcaption>Etapes de formation d'un trou noir</figcaption>
