fix: typo correction

--- a/3eme projet/index.html
+++ b/3eme projet/index.html
@@ -15,7 +15,7 @@
             <li><a href="#Le_concept_de_champ_gravitationnel_dans_la_mécanique_classique" class="nav-link">Le concept de champ gravitationnel dans la mécanique classique</a></li>
             <li><a href="#La_vitesse_de_libération_et_l'application_à_la_lumière" class="nav-link">La vitesse de libération et l'application à la lumière</a></li>
             <li><a href="#Limites_de_la_mécanique_classique"class="nav-link">Limites de la mécanique classique</a></li>
-            <li><a href="#La_relativité_générale_et_le_concept_de_déformation_de_l'espace_temps" class="nav-link">La Relativité générale et le concept de déformation de l'espace temps</a>
+            <li><a href="#La_relativité_générale_et_le_concept_de_déformation_de_l'espace_temps" class="nav-link">La Relativité générale et le concept de déformation de l'espace temps</a></li>
             <li><a href="#Le_concept_des_trous_noirs" class="nav-link">Le concept des trous noirs</a></li>
             <li><a href="#Anatomie_d'un_trou_noir" class="nav-link">Anatomie d'un trou noir</a></li>
             <li><a href="#Formation_des_trous_noirs" class="nav-link">Formation des trous noirs</a></li>
@@ -96,8 +96,9 @@ $$
                 <li>Précession de l'orbite de Mercure</li>
                   <p>L'un des échecs historiques de la mécanique newtonienne est son incapacité à expliquer précisément le mouvement de la planète Mercure. Son orbite subit un phénomène appelé précession : la trajectoire de l'orbite elliptique de Mercure tourne lentement autour du Soleil. Bien que la gravité de Newton puisse expliquer une partie de cette précession, une petite partie restait inexpliquée jusqu'à ce que la relativité générale soit mis en œuvre. Celle-ci introduit la courbure de l'espace-temps due à la masse du Soleil, ce qui permet d'expliquer cette précession supplémentaire observée.</p>
                   <p>Formellement, Newton prédit un mouvement elliptique simple, mais l'effet relativiste ajoute un terme qui provoque une légère rotation de l'ellipse d'orbite à chaque révolution.</p>
-                  <div class="container><img src="https://qph.cf2.quoracdn.net/main-qimg-5e2dbe79e50b0254dfa6d150cb63b842.webp" alt="Précession du périhélie de mercure">
-                    <figcation>Précession du périhélie de mercure</figcation>
+                  <div class="container">
+                    <img src="https://qph.cf2.quoracdn.net/main-qimg-5e2dbe79e50b0254dfa6d150cb63b842.webp" alt="Précession du périhélie de mercure">
+                    <figcaption>Précession du périhélie de mercure</figcaption>
                     </div>
                 <li>Addition des vitesses</li>  
                   <p>Imaginons qu'un observateur soit dans un train qui se déplace à une vitesse de <code>v1= 100km/h</code>. L'observateur à l'intérieur du train lance une balle à une vitesse de <code>v2= 20km/h</code>dans la direction du mouvement du train.</p>
