css update, add h1

--- a/3eme projet/index.html
+++ b/3eme projet/index.html
@@ -22,13 +22,13 @@
             <li><a href="#Durée_de_vie_des_trous_noirs" class="nav-link">Durée de vie des trous noirs</a></li>
             <li><a href="#Méthodes_de_détection_et_d'observation_des_trous_noirs" class="nav-link">Méthodes de détection et d'observation des trous noirs</a>
           </ul>
- </header>
-        </nav>
+        </header>
+      </nav>
 
      <!--main content-->
 
     <main id="main-doc">
-
+           <h1>LES TROUS NOIRS</h1>
       <!--première section-->
         <section class="main-section" id="Le_concept_de_champ_gravitationnel_dans_la_mécanique_classique">
           <header>Le concept de champ gravitationnel dans la mécanique classique</header>
