Add bibliographic references

--- a/3eme projet/index.html
+++ b/3eme projet/index.html
@@ -240,9 +240,9 @@
   </main> 
   <footer>
      <small>
-    <ol>
-   <li id="notenewton">Isaac Newton est né le 4 janvier 1643 à Woolsthorpe, en Angleterre, et est décédé le 31 mars 1727 à Londres.<a href="#revenir1">Revenir</a></li>
-   <li id="notenhawking">Stephen Hawking est né le 8 janvier 1942 à Oxford, en Angleterre, et il est décédé le 14 mars 2018 à Cambridge, en Angleterre.<a href="#revenir2">Revenir</a></li>
+    <ol type="1">
+   <li id="notenewton">ref: Newton, I. (1687) Philosophiae Naturalis Principia Mathematica. Londini, Jussu Societatis Regiæ ac Typis Josephi Streater. Prostat apud plures Bibliopolas. Anno.<a href="#revenir1">&nbsp;Revenir à ma page</a></li>
+   <li id="notehawking">ref: Hawking, S.W. Particle creation by black holes. Commun.Math. Phys. 43, 199–220 (1975). <a href="#revenir2">&nbsp;Revenir à ma page</a></li>
     </ol>
     </small> 
  </footer>
