product landing page html/css

--- a/4eme projet/index.html
+++ b/4eme projet/index.html
@@ -70,7 +70,7 @@
             <input class="slide-input" id="slide-image-1" type="radio" name="slides" checked>
            <img src="https://i.postimg.cc/zGdV6TnF/miel-fleur.jpg" alt="Pot de miel artisanal sur une table avec des fleurs à coté" class="slide-img"/>
            <input class="slide-input" id="slide-image-2" type="radio" name="slides" checked>
-           <img src="https://i.postimg.cc/YC2vddmS/apiculteur-1.jpg" alt="Pot de miel artisanal sur une table" class="slide-img"/>
+           <img src="https://i.postimg.cc/YC2vddmS/apiculteur-1.jpg" alt="apiculteur dans un champ avec des ruches" class="slide-img"/>
            <input class="slide-input" id="slide-image-3" type="radio" name="slides" checked>
            <img src="https://i.postimg.cc/k5zDX9YV/miel-fleur-2.jpg" alt="Pot de miel artisanal sur une table" class="slide-img"/>
           </div>
