--- a/4eme projet/index.html
+++ b/4eme projet/index.html
@@ -68,11 +68,11 @@
               <label for="slide-image-3"></label>
             </div>
             <input class="slide-input" id="slide-image-1" type="radio" name="slides" checked>
-           <img src="https://i.postimg.cc/zGdV6TnF/miel-fleur.jpg" alt="Pot de miel artisanal sur une table avec des fleurs à coté" class="slide-img"/>
+           <img src="https://i.postimg.cc/QN61kTXt/miel-fleur.jpg" alt="Pot de miel artisanal sur une table avec des fleurs à coté" class="slide-img"/>
            <input class="slide-input" id="slide-image-2" type="radio" name="slides" checked>
-           <img src="https://i.postimg.cc/YC2vddmS/apiculteur-1.jpg" alt="apiculteur dans un champ avec des ruches" class="slide-img"/>
+           <img src="https://i.postimg.cc/j2kfsG8N/apiculteur-1.jpg" alt="apiculteur dans un champ avec des ruches" class="slide-img"/>
            <input class="slide-input" id="slide-image-3" type="radio" name="slides" checked>
-           <img src="https://i.postimg.cc/k5zDX9YV/miel-fleur-2.jpg" alt="Pot de miel artisanal sur une table" class="slide-img"/>
+           <img src="https://i.postimg.cc/02bmtyQC/miel-fleur-2.jpg" alt="Pot de miel artisanal sur une table" class="slide-img"/>
           </div>
       </div>
 
@@ -151,7 +151,7 @@
     </section>
 
     <!-- Section des commentaires ou avis clients -->
-    <section class="comment-reviews">
+    <section id="comment" class="comment-reviews">
       <h2>Vos avis : </h2>
       <div class="review">
          <div class="review-bubble">
