--- a/4eme projet/index.html
+++ b/4eme projet/index.html
@@ -97,12 +97,12 @@
 
       <div class="image-3">
         <img src="https://i.postimg.cc/VLrQ0tqp/Comfy-UI-default-00004.webp" alt=" pot de miel d'eucalyptus"/>
-        <p>Miel d'eucalyptus - Intense et rafraîchissant.</p> <!-- Ajout d'une image -->
+        <p>Miel d'eucalyptus - Intense et rafraîchissant.</p>
         <button class="button-product">Voir le produit</button>
         <button class="button-card">Ajouter au panier</button>
       </div>
 
-      <div class="image-1"><!-- Ajout d'une image de produit de miel -->
+      <div class="image-1">
         <img src="https://i.postimg.cc/zGKs01Pk/Comfy-UI-default-00002.webp" alt="pot de miel de jujubier"/>
         <p>Miel d'acacia - Puissant et réputé pour ses bienfaits.</p> 
         <button class="button-product">Voir le produit</button>
@@ -115,7 +115,7 @@
       <!-- À propos -->
       <div id="about-us">
        <div class="first-div">
-        <h2>Qui sommes-nous ?</h2>
+        <h2>Qui sommes-nous&nbsp;?</h2>
         <p>Nous sommes des apiculteurs passionnés qui récoltent du miel avec amour et respect de la nature. Nos abeilles butinent dans des environnements préservés, garantissant des miels de haute qualité, sans additifs ni produits chimiques. Découvrez nos variétés de miel 100 % naturelles et locales.
           Chaque pot de miel que nous produisons est le résultat d'un savoir-faire artisanal. Nous sommes dévoués à offrir à nos clients une expérience authentique, en mettant en avant les saveurs uniques de notre terroir. Que vous recherchiez un miel doux et floral ou un goût plus corsé, notre gamme saura répondre à vos envies.
           Nous croyons que le miel est bien plus qu'un simple produit : c'est une véritable source de bien-être et de plaisir. Laissez-vous séduire par la richesse de nos miels et rejoignez-nous dans cette aventure gourmande.</p>
@@ -143,7 +143,7 @@
          <p>En achetant nos produits, vous contribuez à la protection des abeilles et au développement durable de l'apiculture dans nos régions.</p>
       </div>
       <div class="item">
-        <img src="https://i.postimg.cc/0yxwtqF0/Design-sans-titre5-removebg.png" alt=" logo mpact environnemental"/>
+        <img src="https://i.postimg.cc/0yxwtqF0/Design-sans-titre5-removebg.png" alt=" logo impact environnemental"/>
         <h3>Impact environnemental</h3>
          <p>Nos pratiques apicoles préservent la biodiversité et aident à maintenir un équilibre écologique en favorisant la pollinisation des plantes locales.</p>
       </div>
@@ -176,7 +176,7 @@
   <!-- formulaire d'inscription -->
   <section id="form">
     <div class="form-container">
-    <h3>Ne Manquez rien !</h3>
+    <h3>Ne manquez rien&nbsp;!</h3>
     <p>Inscrivez-vous à nos courriels pour recevoir les dernières nouvelles chaque semaine.</p>
     <form action="" method="POST">
       <input type="email" id="email" placeholder="Entrez votre email" name="email" required /> 
@@ -203,17 +203,17 @@
           <h4>Contact</h4>
           <ul>
               <li><span class="material-symbols-outlined">location_on</span>  23 Rue Marc Lavoine, 75000 Paris</li>
-              <li><span class="material-symbols-outlined">call</span> +33 6 12 34 56 78</li>
-              <li><span class="material-symbols-outlined">mail</span> nexistepas@nahla-miel.fr</li>
+              <li><span class="material-symbols-outlined">call</span><a href="tel +33612345678">+33 6 12 34 56 78</a></li>
+              <li><span class="material-symbols-outlined">mail</span><a href= "mailto:nexistepas@nahla-miel.fr">nexistepas@nahla-miel.fr</a></li>
           </ul>
       </div>
 
       <div class="footer-section">
           <h4>Horaires d'ouverture</h4>
           <ul>
-              <li>Lundi : Vendredi: 9h - 18h</li>
-              <li>Samedi : Fermé</li>
-              <li>Dimanche : Fermé</li>
+              <li>Lundi - Vendredi&nbsp;:&nbsp;9h - 18h</li>
+              <li>Samedi&nbsp;:&nbsp;Fermé</li>
+              <li>Dimanche&nbsp;:&nbsp;Fermé</li>
           </ul>
       </div>
 
@@ -235,7 +235,7 @@
   </div>
 
   <div class="footer-bottom">
-      <p>&copy; 2024 Nahla - Tous droits réservés</p>
+      <p><small>&copy; 2024 Nahla - Tous droits réservés</small></p>
   </div>
   </footer>
   </body>
